fixed content visibility for #folder-select

--- a/src/NotefulForm/NotefulForm.css
+++ b/src/NotefulForm/NotefulForm.css
@@ -46,3 +46,7 @@
   background-color: #29862e;
   color: white;
 }
+
+#folder-select {
+  height: fit-content;
+}
